--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div id="loaderlabel"<h2>Loading Model...</h2></div>
       <div id="loader"> </div>
       <div style="display:none;" id="mainAPP">
-      <label for="input">How was your dinner? </label><br><br>
+      <label for="input">dinner comment? </label><br><br>
       <input placeholder="Try: 'The salad is fresh and delicious" id="input">
-      <button class="button" style="vertical-align:middle"><span>Post Review </span></button>
+      <button class="button" style="vertical-align:middle"><span>let's predict </span></button>
       <p></p>
      </div>
     </div>
